--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
+	"manifest_version": 3,
 	"name": "Clear Downloads",
 	"version": "1.1.0",
-	"description": "Clears the Downloads list every 10 seconds to force the download bar to disappear when all downloads are complete",
+	"description": "Clears the Downloads list every 10 seconds to force the download button to disappear when all downloads are complete",
 	"homepage_url": "https://github.com/sindresorhus/clear-downloads",
-	"manifest_version": 2,
-	"minimum_chrome_version": "66",
+	"minimum_chrome_version": "125",
 	"permissions": [
 		"browsingData"
 	],
@@ -12,8 +12,7 @@
 		"128": "icon.png"
 	},
 	"background": {
-		"scripts": [
-			"background.js"
-		]
+		"service_worker": "background.js",
+		"type": "module"
 	}
 }
